# rooms-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RoomsBotScheme.excalidraw  example.env  pyproject.toml
.github/workflows/: pre-commit.yml
src/api/: __init__.py  methods.py
src/api/schemas/: method_input_schemas.py  method_output_schemas.py
src/bot/: config.py  main.py  middleware.py  start_message.py  utils.py
src/bot/cachers/: __init__.py
src/bot/cachers/alias_cachers/: __init__.py  interface.py  memory.py
src/bot/dialogs/: __init__.py  communication.py  confirmation.py  create_room.py  create_rule.py  create_task.py  dialog_communications.py  incoming_invitations.py  order_selection.py  outgoing_invitations.py  prompt.py  room.py  roomless.py  rules.py  states.py  task_view.py
src/bot/dialogs/invitation/: incoming_invitations.py  outgoing_invitations.py
src/bot/dialogs/manual_task/: create_manual_task.py  manual_task_view.py  manual_tasks.py
src/bot/dialogs/order/: create_order.py
src/bot/dialogs/periodic_task/: create_periodic_task.py  periodic_task_view.py  periodic_tasks.py
src/bot/dialogs/rule/: rules.py
src/bot/dialogs/utils/: confirmation.py  prompt.py
